# effdl26-liger-kernel-report

./: README.md  plots_utils.py  pyproject.toml  report.ipynb  run_train_benchmark.sh  train_llama.py
logs/: LlamaForCausalLM__bs_12__ce_liger__model_liger.pt  LlamaForCausalLM__bs_12__ce_ligerfusedlinear__model_hf.pt  LlamaForCausalLM__bs_12__ce_ligerfusedlinear__model_liger.pt  LlamaForCausalLM__bs_12__ce_ligerfusedlinear__model_liger__tiled.pt  LlamaForCausalLM__bs_12__ce_torch__model_liger.pt  LlamaForCausalLM__bs_16__ce_ligerfusedlinear__model_liger__tiled.pt  LlamaForCausalLM__bs_1__ce_liger__model_hf.pt  LlamaForCausalLM__bs_1__ce_liger__model_liger.pt  LlamaForCausalLM__bs_1__ce_ligerfusedlinear__model_hf.pt  LlamaForCausalLM__bs_1__ce_ligerfusedlinear__model_liger.pt  LlamaForCausalLM__bs_1__ce_ligerfusedlinear__model_liger__tiled.pt  LlamaForCausalLM__bs_1__ce_torch__model_hf.pt  LlamaForCausalLM__bs_1__ce_torch__model_liger.pt  LlamaForCausalLM__bs_24__ce_ligerfusedlinear__model_liger__tiled.pt  LlamaForCausalLM__bs_2__ce_liger__model_hf.pt  LlamaForCausalLM__bs_2__ce_liger__model_liger.pt  LlamaForCausalLM__bs_2__ce_ligerfusedlinear__model_hf.pt  LlamaForCausalLM__bs_2__ce_ligerfusedlinear__model_liger.pt  LlamaForCausalLM__bs_2__ce_ligerfusedlinear__model_liger__tiled.pt  LlamaForCausalLM__bs_2__ce_torch__model_hf.pt  LlamaForCausalLM__bs_2__ce_torch__model_liger.pt  LlamaForCausalLM__bs_32__ce_ligerfusedlinear__model_liger__tiled.pt  LlamaForCausalLM__bs_4__ce_liger__model_hf.pt  LlamaForCausalLM__bs_4__ce_liger__model_liger.pt  (+11 more)
traces/: CrossEntropyLoss.json  (+3 more)
(+6 files in other folders)
