[project]
name = "liger-kernel-report"
version = "0.0.1"
description = "Project with Liger-Kernel usage demonstration for Effictive DL System course in YSDA 26"
requires-python = "==3.12.5"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "liger-kernel>=0.7.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "torch>=2.10.0",
    "torchviz>=0.0.3",
    "transformers>=5.3.0",
    "triton>=3.6.0",
]
