[project]
name = "liger-kernel-report"
version = "0.0.1"
description = "Project with Liger-Kernel usage demonstration for Effictive DL System course in YSDA 26"
requires-python = "==3.12.5"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.2",
    "iprogress>=0.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "liger-kernel>=0.7.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "torch>=2.10.0",
    "torchviz>=0.0.3",
    "transformers>=5.3.0",
    "triton>=3.6.0",
]
